--- a/templates/explanation.html
+++ b/templates/explanation.html
@@ -61,7 +61,7 @@
         <div class="navigation-buttons">
             <a href="{{ url_for('task_detail', module_id=module_id, task_id=task_id) }}" class="btn">Back to Task</a>
             <a href="{{ url_for('solution', module_id=module_id, task_id=task_id) }}" class="btn">View Solution</a>
-            <a href="{{ url_for('open_interpreter', module_id=module_id, task_id=task_id) }}" class="btn">Open Interpreter</a>
+            <a href="{{ url_for('interpreter', module_id=module_id, task_id=task_id) }}" class="btn">Open Interpreter</a>
         </div>
     </div>
 </div>
