--- a/templates/solution.html
+++ b/templates/solution.html
@@ -29,7 +29,7 @@
     <div class="navigation-buttons">
         <a href="{{ url_for('task_detail', module_id=module_id, task_id=task_id) }}" class="btn">Back to Task</a>
         <a href="{{ url_for('explanation', module_id=module_id, task_id=task_id) }}" class="btn">View Explanation</a>
-        <a href="{{ url_for('open_interpreter', module_id=module_id, task_id=task_id) }}" class="btn">Open Interpreter</a>
+        <a href="{{ url_for('interpreter', module_id=module_id, task_id=task_id) }}" class="btn">Open Interpreter</a>
     </div>
 </div>
 {% endblock %}
