--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 
 {% block title %}Home - My Course Site{% endblock %}
@@ -10,7 +11,7 @@
         <div class="navigation-links">
             <h2 class="navigation-title">Explore Our Course</h2>
             <ul class="navigation-list">
-                <li><a href="/module" class="navigation-link">View Modules</a></li>
+                <li><a href="/modules/1" class="navigation-link">View Modules</a></li>
                 <li><a href="/login" class="navigation-link">Login</a></li>
                 <li><a href="/register" class="navigation-link">Register</a></li>
             </ul>
